--- a/TeaService/TeaService.csproj
+++ b/TeaService/TeaService.csproj
@@ -118,7 +118,9 @@
     <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="TeaService_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
